unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/pw_ccpro__ValidatedField__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AddressTools Fields to Validate</label>
</CustomObject>