unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__AllowOnlyListedStates__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__AllowOnlyListedStates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Only Listed States</label>
    <type>Checkbox</type>
</CustomField>