unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__AllowOnlyListedUsZipCodes__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__AllowOnlyListedUsZipCodes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, this option will verify whether the entered US ZIP Code exists within the installed ZIP Code data.</description>
    <inlineHelpText>If enabled, this option will verify whether the entered US ZIP Code exists within the installed ZIP Code data.</inlineHelpText>
    <label>Require Installed Zipcode</label>
    <type>Checkbox</type>
</CustomField>