unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__CityField__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__CityField__c</fullName>
    <label>City Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>