unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__CountryField__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__CountryField__c</fullName>
    <label>Country Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>