unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__EnableBulkAddressVerification__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__EnableBulkAddressVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Bulk Address Verification</label>
    <type>Checkbox</type>
</CustomField>