unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__EnableGeolocation__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__EnableGeolocation__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled, geolocation fields (latitude and longitude) are shown in address edit mode.</inlineHelpText>
    <label>Enable geolocation</label>
    <type>Checkbox</type>
</CustomField>