unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__IsCityMandatory__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsCityMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>City is Mandatory</label>
    <type>Checkbox</type>
</CustomField>