unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__IsCountryMandatory__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsCountryMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country is Mandatory</label>
    <type>Checkbox</type>
</CustomField>