unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__IsStreetLine2Mandatory__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsStreetLine2Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Street Line 2 is Mandatory</label>
    <type>Checkbox</type>
</CustomField>