unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__IsZipCodeMandatory__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsZipCodeMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZIP Code is Mandatory</label>
    <type>Checkbox</type>
</CustomField>