unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__LocationLongitudeFieldId__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__LocationLongitudeFieldId__c</fullName>
    <label>Location Longitude Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>