unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__RecordType__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__RecordType__c</fullName>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>