unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__StandardizeState__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__StandardizeState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standardize State</label>
    <type>Checkbox</type>
</CustomField>