unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__SubBuildingLine__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__SubBuildingLine__c</fullName>
    <label>Sub-Building Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>