unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__UseAdvancedQuery__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__UseAdvancedQuery__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enabling this option will yield more precise address matching providing your data can support it</inlineHelpText>
    <label>Address is always in correct fields</label>
    <type>Checkbox</type>
</CustomField>