unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__UseForAddressValidation__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__UseForAddressValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Premise-Level AV</label>
    <type>Checkbox</type>
</CustomField>