unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__ZipCodeField__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ZipCodeField__c</fullName>
    <label>ZIP Code Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>