unpackaged/main/default/objects/pw_ccpro__ValidatedField__c/fields/pw_ccpro__ZipCodeFieldId__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ZipCodeFieldId__c</fullName>
    <label>ZipCode Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>